# VoiceBookAI

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: booking.py  conversation.py  database.py  intent.py  main.py  models.py  recommender.py  stt.py  tts.py
frontend/: app.js  index.html  style.css
tests/: test_booking.py  test_database.py  test_recommender.py
